--- a/views/style.css
+++ b/views/style.css
@@ -103,7 +103,18 @@ p {
     stroke: #16a34a;
 }
 
+.icon-tabler-brand-nodejs:hover {
+    transition: 0.5s;
+    stroke: #0f833a;
+}
+
+.icon-tabler-brand-wordpress:hover {
+    transition: 0.5s;
+    stroke: #0073AA;
+}
+
 .icon:hover{
+    transition: 0.5s;
     stroke: #0c4a6e;
 }
 
@@ -216,6 +227,10 @@ li:hover{
     background-image: url("/img/PokeDev.png");
 }
 
+.serviamigo {
+    background-image: url("/img/serviamigo.png");
+}
+
 #sidebar {
     background-color: #27272a;
     color: #fff;
@@ -236,4 +251,26 @@ li:hover{
 
 #sidebar a:hover {
     background-color: #555;
+}
+
+.container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 60;
+}
+
+.container-data {
+    background-color: rgb(39 39 42);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: 80%;
 }
