--- a/views/style.css
+++ b/views/style.css
@@ -48,15 +48,13 @@ header {
 
 /* Contenedor hexagonal para la foto de perfil */
 .hexagon-container {
-    width: 500px;
-    height: 500px;
+    width: 60%;
     position: relative;
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 100% 100%, 0% 100%, 0% 25%);
     animation: float 3s ease-in-out infinite;
 }
 
 .hexagon-image {
-    padding: 15px;
     width: 100%;
     height: 100%;
 }
